<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/surname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:fontFamily="@font/sfui_semibold"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:fontFamily="@font/sfui_semibold"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/patronymic_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/patronymic"
        android:fontFamily="@font/sfui_semibold"
        android:textColor="@color/black" />

</LinearLayout>