<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfui_semibold"
            android:text="@string/personal_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:nextFocusDown="@id/name_edit_text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sfui_light"
                android:hint="@string/surname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:nextFocusDown="@id/patronymic_edit_text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sfui_light"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:nextFocusDown="@id/birth_date_button"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patronymic_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sfui_light"
                android:hint="@string/patronymic"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/birth_date"
            android:fontFamily="@font/sfui_bold"
            android:textColor="@color/main"
            android:layout_marginStart="8dp"/>

        <Button
            android:id="@+id/birth_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/calendar"
            android:background="@drawable/button_secondary_background"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/sfui_semibold"
            android:textAllCaps="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:text="Март 5, 1997" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sfui_semibold"
            android:background="@drawable/button_main_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/next"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/personal_info_empty_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_values"
            android:fontFamily="@font/sfui_semibold"
            android:textColor="@color/error"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>